infra-as-code/vpc.tf
resource "aws_vpc" "vpc_lab" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "vpc-lab"
  }
}
